--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://jitpack.io"
+            credentials { username authToken }
+        }
     }
 }
 
