--- a/coverdraw/src/main/AndroidManifest.xml
+++ b/coverdraw/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
     package="com.example.coverdraw">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+<!--    <application>-->
+<!--        <activity android:name=".DrawActivity"-->
+<!--            android:theme="@style/Theme.AppCompat.NoActionBar"/>-->
+<!--    </application>-->
     
     <application
         tools:replace="android:label"
@@ -12,7 +17,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity android:name=".DrawActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
