--- a/coverdraw/build.gradle
+++ b/coverdraw/build.gradle
@@ -1,5 +1,5 @@
-apply plugin: 'com.android.application'
-//apply plugin: 'com.android.library'
+//apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.coverdraw"
+//        applicationId "com.example.coverdraw"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
@@ -35,7 +35,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     // Material design
-    implementation "com.google.android.material:material:$rootProject.materialVersion"
+    implementation "com.google.android.material:material:1.2.1"
     //Color Picker
     implementation 'com.github.yukuku:ambilwarna:2.0.1'
 
