--- a/coverdraw/src/main/AndroidManifest.xml
+++ b/coverdraw/src/main/AndroidManifest.xml
@@ -5,26 +5,26 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-<!--    <application>-->
-<!--        <activity android:name=".DrawActivity"-->
-<!--            android:theme="@style/Theme.AppCompat.NoActionBar"/>-->
-<!--    </application>-->
-    
-    <application
-        tools:replace="android:label"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".DrawActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+    <application>
+        <activity android:name=".DrawActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"/>
     </application>
+    
+<!--    <application-->
+<!--        tools:replace="android:label"-->
+<!--        android:allowBackup="true"-->
+<!--        android:icon="@mipmap/ic_launcher"-->
+<!--        android:label="@string/app_name"-->
+<!--        android:roundIcon="@mipmap/ic_launcher_round"-->
+<!--        android:supportsRtl="true"-->
+<!--        android:theme="@style/Theme.AppCompat.NoActionBar">-->
+<!--        <activity android:name=".DrawActivity">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
+<!--    </application>-->
 
 </manifest>
